# Officeboy

./: .coveragerc  .gitignore  .officeboy.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Access EE Specification.md
scripts/: build_packages.py  init_repo.sh  uv_build.sh  uv_setup.ps1  uv_setup.sh
src/officeboy/: __init__.py  cli.py
src/officeboy/access/: __init__.py  application.py  objects.py
src/officeboy/core/: __init__.py  assembler.py  disassembler.py  exporter.py  hasher.py  importer.py  index.py
src/officeboy/generators/: __init__.py  functional_tests.py  unit_tests.py
src/officeboy/i18n/: __init__.py
src/officeboy/lint/: cache.py  config.py  engine.py  explain.py  model.py  registry.py  result.py  stats.py
tests/: __init__.py  access_simulator.py  conftest.py  test_access_application.py  test_cli.py  test_exporter.py  test_functional.py  test_generators.py  test_hasher.py  test_importer.py  test_index.py  test_integration.py  test_interface_mocked.py
tests/lint/: helpers.py  test_cache.py  test_engine.py  test_explain.py  test_explain_all.py
