[metadata]
name = officeboy
author = Yorga Babuscan
author_email = yorgabr@gmail.com
description = MS Access Version Control and Automation CLI Tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yorgabr/officeboy
license = GPL-3.0-or-later
license_files = LICENSE.md
classifiers =
    Development Status :: 4 - Beta
    Environment :: Win32 (MS Windows)
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business
    Topic :: Software Development :: Version Control
    Topic :: Utilities

[options]
python_requires = >=3.10
package_dir =
    =src
packages = find:
zip_safe = False
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    officeboy = officeboy.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    pytest-mock>=3.10
    tox>=4.0
    ruff>=0.1.0
    bandit[toml]>=1.7
    mypy>=1.0
    build>=0.10
    twine>=4.0
packaging =
    pyinstaller>=6.0
    msix-packaging>=0.1

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --strict-markers
    --verbose
    --tb=short
    --cov=officeboy
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=100

[coverage:run]
source = src/officeboy
branch = True
parallel = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    pass
    \.\.\.

[coverage:html]
directory = htmlcov
